samples/_failures_safe/1761477612_7f6c7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b6348f5.c: In function ‘main’:
./samples/SAFE/__tmp_4b6348f5.c:187:5: error: expected expression at end of input
  187 |     printf("Tokens found: %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_4b6348f5.c:187:5: error: expected declaration or statement at end of input
